--- a/package.json
+++ b/package.json
@@ -4,18 +4,87 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@dimerapp/markdown": "^3.2.0",
+    "@expo/browser-polyfill": "0.0.1-alpha.3",
+    "@expo/vector-icons": "^13.0.0",
+    "@formatjs/intl-displaynames": "^6.6.2",
+    "@formatjs/intl-locale": "^3.4.1",
+    "@formatjs/intl-pluralrules": "^5.2.8",
+    "@pixi/core": "^7.3.2",
+    "@pixi/filter-alpha": "^7.3.2",
+    "@pixi/filter-blur": "^7.3.2",
+    "@react-native-community/checkbox": "^0.5.16",
+    "@react-native-community/datetimepicker": "7.2.0",
+    "@react-navigation/drawer": "^6.6.4",
+    "@react-navigation/native": "^6.1.8",
+    "@react-navigation/native-stack": "^6.9.14",
+    "babel-plugin-import-glob": "^2.0.0",
+    "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "~49.0.13",
+    "expo-asset-utils": "1.1.1",
+    "expo-checkbox": "~2.4.0",
+    "expo-document-picker": "~11.5.4",
+    "expo-image": "~1.3.5",
+    "expo-localization": "~14.3.0",
+    "expo-pixi": "1.0.1",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "fbemitter": "^2.1.1",
+    "i": "^0.3.7",
+    "i18next": "^23.6.0",
+    "i18next-browser-languagedetector": "^7.1.0",
+    "js-md5": "^0.8.3",
+    "lodash": "^4.17.19",
+    "markdown-draft-js": "^2.4.0",
+    "native-base": "^2.12.1",
+    "npm": "^10.2.1",
     "react": "18.2.0",
-    "react-native": "0.72.5"
+    "react-draft-wysiwyg": "^1.15.0",
+    "react-i18next": "^13.3.1",
+    "react-native": "0.72.6",
+    "react-native-button": "^3.1.0",
+    "react-native-date-picker": "^4.3.3",
+    "react-native-draftjs-editor": "^0.0.2",
+    "react-native-draftjs-render": "^2.9.0",
+    "react-native-draggable-flatlist": "^4.0.1",
+    "react-native-easy-markdown": "^1.3.0",
+    "react-native-elements": "^3.4.3",
+    "react-native-fs": "^2.20.0",
+    "react-native-gender-picker-modal": "^0.1.0",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-keyboard-aware-view": "^0.0.14",
+    "react-native-keyboard-spacer": "^0.4.1",
+    "react-native-lightbox": "^0.8.0",
+    "react-native-markdown-renderer": "^3.2.8",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-render-html": "^6.3.4",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "13.9.0",
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-vector-icons": "^10.0.0",
+    "react-native-webview": "13.2.2",
+    "reactotron-react-native": "^3.4.1",
+    "runes": "^0.4.3",
+    "shortid": "^2.2.14",
+    "uuid": "3.4.0",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "babel-plugin-i18next-extract": "^0.9.0",
+    "babel-plugin-react-native-classname-to-style": "^1.2.2",
+    "babel-plugin-react-native-platform-specific-extensions": "^1.1.1",
+    "react-native-css-transformer": "^1.2.4",
+    "react-native-paper": "^5.11.0"
+  },
+  "resolutions": {
+    "@react-native-community/datetimepicker": "7.2.0"
   },
   "private": true
 }
